--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="center jumbotron">
-  <h1>Welcome to the Safe Trek</h1>
+  <h1></br>Safe Trek</h1>
 
   <h2>
     It's going to be pretty cool, we pomise!
